<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="395dp"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textSize="55px"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@+id/jouer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <Button
        android:id="@+id/jouer"
        android:layout_width="88dp"
        android:layout_height="wrap_content"
        android:text="@string/jouer"
        app:layout_constraintBottom_toTopOf="@+id/parametres"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <Button
        android:id="@+id/parametres"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/parametre"
        app:layout_constraintBottom_toTopOf="@+id/credits"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/jouer" />


    <Button
        android:id="@+id/credits"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/credits"
        app:layout_constraintBottom_toTopOf="@+id/parametres"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/quitter" />

    <Button
        android:id="@+id/quitter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Quitter"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/parametres" />

</android.support.constraint.ConstraintLayout>